# deadair

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  SOLID_PRINCIPLES.md
server/: .gitignore  pyproject.toml
server/src/deadair/: config.py  container.py  logging_config.py  worker.py
server/src/deadair/domain/: edl_builder.py
server/src/deadair/presentation/: main.py
server/tests/contract/: artifact_repository_contract.py  job_repository_contract.py  progress_reporter_contract.py  transcript_segment_sink_contract.py  video_repository_contract.py
server/tests/infrastructure/: test_progress_reporter_memory.py  test_progress_reporter_sqlite.py  test_transcript_segment_sink_memory.py  test_transcript_segment_sink_sqlite.py
server/tests/infrastructure/jobs/: test_rq_job_runner.py
server/tests/infrastructure/media/: conftest.py  test_faster_whisper_transcriber.py  test_ffmpeg_audio_extractor.py  test_ffmpeg_silence_detector.py  test_ffmpeg_video_renderer.py
server/tests/infrastructure/persistence/: test_artifact_repository_disk.py  test_artifact_repository_memory.py  test_job_repository_memory.py  test_job_repository_sqlite.py  test_video_repository_memory.py  test_video_repository_sqlite.py
server/tests/unit/: test_config.py
server/tests/unit/application/: test_run_pipeline_job.py
server/tests/unit/domain/: test_config_hash.py  test_edl.py  test_edl_builder.py  test_edl_builder_properties.py  test_filler_policy.py  test_ids.py  test_job.py  test_result.py  test_silence_policy.py  test_step_graph.py  test_time_range.py  test_transcript.py  test_video.py
(+70 files in other folders)
